--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.5.9",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-cron": "^2.0.3"
   }
 }
